# SupperNanny

./: .gitignore  Cargo.toml  Defense Jury - SuperNanny.pptx  Makefile  README.md  bpf_pass_data  bpf_pass_data.c  commands.txt  data.json  data2.json  file_filter.bpf.c  file_filter.skel.json  input_files.txt  insert_data_to_map.py  insert_data_to_map_old.py  logs.txt  main.rs  masternode.yaml  package.json  read_map  read_map.c  script.py  set_id.py  supernanny.conf  supernanny_module.c  supernanny_module.ko  supernanny_module.mod  supernanny_module.mod.c  test_files.txt  test_filter_code.py  workernode.yaml
.github/workflows/: SuperNanny_CI.yml  SuperNanny_Release.yml  deploy_postgres.yml  push-admin-api-docker.yml  push-axiom-docker.yml  push-database-grafana-docker.yml  push-frontend-docker.yml  test-sandboxer-docker.yml
Sandboxer/: Cargo.toml  main.rs
Script_vTanguy/: truc.sh
SuperNanny_Secured-UI/SuperNanny_api/: .env  Cargo.toml  cookies.txt  diesel.toml
SuperNanny_Secured-UI/SuperNanny_api/migrations/2025-03-05-183341_add_sandbox_events/: up.sql
SuperNanny_Secured-UI/SuperNanny_api/src/: main.rs  schema.rs
SuperNanny_Secured-UI/SuperNanny_front/: Cargo.toml
SuperNanny_Secured-UI/SuperNanny_front/frontend/: Cargo.toml  index.html  styles.css
SuperNanny_Secured-UI/SuperNanny_front/frontend/src/: auth.rs  configurations.rs  dashboard.rs  envs_page.rs  home.rs  layout.rs  logout.rs  main.rs  manage_roles.rs  manage_users.rs  models.rs  protected.rs  utils.rs
SuperNanny_Secured-UI_V2/SuperNanny_api/: .env  Cargo.toml  diesel.toml
SuperNanny_Secured-UI_V2/SuperNanny_api/certs/: dev-key.pem
SuperNanny_Secured-UI_V2/SuperNanny_api/src/: main.rs  state.rs
SuperNanny_Secured-UI_V2/SuperNanny_api/src/admin/: db.rs  handler.rs  jwt.rs  mod.rs
SuperNanny_Secured-UI_V2/SuperNanny_api/src/middleware/: rate_limit.rs
SuperNanny_Secured-UI_V2/SuperNanny_api/src/services/: mod.rs
SuperNanny_Secured-UI_V2/SuperNanny_api/src/services/logs/: db.rs  handler.rs
SuperNanny_Secured-UI_V2/SuperNanny_api/src/services/roles/: db.rs  handler.rs
SuperNanny_Secured-UI_V2/SuperNanny_api/src/services/rules/: db.rs  handler.rs  mod.rs
SuperNanny_Secured-UI_V2/SuperNanny_api/src/services/users/: db.rs  handler.rs  mod.rs
SuperNanny_UI/SuperNanny_api/: Cargo.toml  diesel.toml
SuperNanny_UI/SuperNanny_front/: Cargo.toml
SuperNanny_UI/SuperNanny_front/src/: main.rs
SuperNanny_api/: .env  Cargo.toml  Dockerfile  README.md
SuperNanny_api/certs/: dev-cert.pem
SuperNanny_api/src/: main.rs  schema.rs  state.rs  tls.rs
SuperNanny_api/src/admin/: csrf.rs  db.rs  handler.rs  jwt.rs  mod.rs
SuperNanny_api/src/middleware/: rate_limit.rs
SuperNanny_api/src/services/logs/: db.rs  handler.rs  mod.rs
SuperNanny_api/src/services/roles/: db.rs  handler.rs
SuperNanny_api/src/services/rules/: db.rs  handler.rs
SuperNanny_api/src/services/users/: db.rs  handler.rs
SuperNanny_api/src/utils/: crypto.rs  logger.rs  mod.rs
SuperNanny_cluster_kub/: README.md
SuperNanny_cluster_kub/playbooks/: objects_deployment.yaml
SuperNanny_front/: Cargo.toml  Dockerfile  README.md  supernanny.conf
SuperNanny_front/frontend/: Cargo.toml  index.html  styles.css  trunk.toml
SuperNanny_front/frontend/src/: api.rs  auth.rs  configurations.rs  dashboard.rs  guard.rs  layout.rs  logout.rs  main.rs  manage_roles.rs  manage_users.rs  models.rs  session.rs  utils.rs
SuperNanny_front/frontend/src/utils/: api_client.rs
SuperNanny_front/src-tauri/: Cargo.toml  tauri.conf.json
SuperNanny_front/static_server/: Cargo.toml  Dockerfile
UI_v2-final/app/: Cargo.toml
UI_v2-final/appapi/: Cargo.toml  README.md
UI_v2/app/: Cargo.toml
UI_v2/appapi/: Cargo.toml  cookies.txt
User_Interface/app/: Cargo.toml
User_Interface/appapi/: Cargo.toml  cookies.txt  data.json  logs.txt  password_hash.txt
User_Interface/appapi/src/: main.rs
cluster_kub/: delwork.yaml  masternode.yaml  secret.yaml  worker.yaml
cluster_kub/Objects/: grafana.yaml  microservice_bdd.yaml  postgres.yaml
cluster_kub/objects/: api.yaml  grafana-pvc.yaml  postgre-pv.yaml  postgres.yaml  sandbox.yaml
lib/: Cargo.toml
pam_supernanny/: Cargo.toml  README.md
pam_supernanny/src/: lib.rs
rust-landlock-main/: .env  Cargo.toml  Dockerfile  README.md  sandboxer.txt  test.py  two_run_sandbower.sh
rust-landlock-main/application_conf/: rules.firefox.env  rules.ls.env  rules.test.sh.env
rust-landlock-main/docker/: Dockerfile.postgres  Dockerfile.sandboxer  docker-compose.yml
rust-landlock-main/docker/postgres/: init.sql
rust-landlock-main/logs/: sandboxer_first.log.11
rust-landlock-main/older_version/: sandboxer_db.rs  test_full_log.rs
rust-landlock-main/queries_sql/: full_script.sql  grafana.sql
rust-landlock-main/queries_sql/sans_network/: init.sql  insert_without_network.sql
rust-landlock-main/scripts/: sandboxer_wrapper.sh  test_firefox.sh  two_run_sandbower.sh
rust-landlock-main/src/: .env  auth.rs  lib.rs  logger.rs  policy_client.rs
rust-landlock-main/supply-chain/: config.toml
src/: main.rs
supernanny_ansible/: ansible.cfg  cookies.txt  install_dev_certs.yml  main.yml  prepare_system.yml
supernanny_interceptor/: Cargo.toml  Makefile  README.md  build.rs
supernanny_interceptor/src/: dispatcher.rs  lib.rs
supernanny_interceptor/src/ebpf/kern/: exec_intercept.c
supernanny_interceptor/src/ebpf/user/: event.rs
supernanny_interceptor/src/integration/: mod.rs  mod.rs.save  mod.rs.save.1
supernanny_service/: .env  Cargo.toml  Dockerfile  README.md  ansible.txt  dev-cert.pem  dev-key.pem  server.txt
supernanny_service/src/: main.rs  state.rs  tls.rs
supernanny_service/src/auth/: handlers.rs  jwt.rs  mod.rs
supernanny_service/src/events/: handlers.rs  mod.rs
supernanny_service/src/models/: dto.rs  mod.rs  policy.rs  rules.rs  security_log.rs
supernanny_service/src/policy/: handler.rs
supernanny_service/src/roles/: handlers.rs  mod.rs
supernanny_service/src/ruleset/: app_name.rs  default.rs  handlers.rs  mod.rs
supernanny_service/src/utils/: logger.rs  mod.rs  permissions.rs
(+24 files in other folders)
