[package]
name    = "SuperNanny_api"
version = "0.1.0"
edition = "2021"

[dependencies]
# ─── actix + rustls 0.22 ───────────────────────────────────────────────────
actix-web   = { version = "4.4", default-features = false, features = ["macros", "cookies", "rustls-0_23"] }
actix-cors  = "0.7.1"
actix-service = "2.0.2"

tokio-rustls = "0.26"
rustls       = { version = "0.23", default-features = false, features = ["std"] }
rustls-pemfile = "2.0"
rcgen        = "0.13"

# ─── runtime & async ───────────────────────────────────────────────────────
tokio        = { version = "1.43", features = ["full"] }
futures-util = "0.3"

# ─── crypto / sécurité ─────────────────────────────────────────────────────
argon2       = "0.5.3"
bcrypt       = "0.17"
base64       = "0.22"
jsonwebtoken = "9.3.1"

# ─── base de données ───────────────────────────────────────────────────────
diesel       = { version = "2.1", features = ["postgres", "r2d2", "chrono"] }
dotenv       = "0.15"

# ─── utilitaires ───────────────────────────────────────────────────────────
chrono       = { version = "0.4.39", features = ["serde"] }
rand         = "0.9.1"
rand_core    = "0.9.3"
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
regex        = "1.9"
uuid         = { version = "1.3", features = ["v4", "serde"] }
anyhow       = "1.0"
notify-rust  = "4.5.6"
once_cell    = "1.18"
time         = { version = "0.3", features = ["macros"] }
reqwest      = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
log          = "0.4"
env_logger   = "0.11"

# ─── features maison ───────────────────────────────────────────────────────
[features]
persist_logs = []
