[package]
name = "supernanny_sandboxer"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"
description = "Master Project SuperNanny"
license = "ISEN Yncréa Méditérannée"
keywords = ["access-control", "linux", "sandbox", "security"]
categories = ["api-bindings", "os::linux-apis", "virtualization", "filesystem"]
exclude = [".gitignore"]
readme = "README.md"

[dependencies]
enumflags2 = "0.7"
libc = "0.2.171"
thiserror = "2.0.12"
anyhow = "1.0.97"
regex = "1.11.1"
hostname = "0.4.0"
dialoguer = "0.11.0"
postgres = "0.19.10"
landlock = "0.4.1"


[dev-dependencies]
anyhow = "1.0"
lazy_static = "1"
strum = "0.27.1"
strum_macros = "0.27.1"
