[package]
name = "supernanny_sandboxer"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"
description = "Master Project SuperNanny"
license = "ISEN Yncréa Méditérannée"
keywords = ["access-control", "linux", "sandbox", "security"]
categories = ["api-bindings", "os::linux-apis", "virtualization", "filesystem"]
exclude = [".gitignore"]
readme = "README.md"

[dependencies]
enumflags2 = "0.7"
libc = "0.2.172"
thiserror = "2.0.12"
anyhow = "1.0.98"
regex = "1.11.1"
hostname = "0.4.1"
dialoguer = "0.11.0"
landlock = "0.4.1"
dotenvy = "0.15.7"
once_cell = "1.21.3"
tempfile = "3.19.1"
bcrypt = "0.17.0"
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.40"
zeroize = "1.8.1"


[dev-dependencies]
anyhow = "1.0"
lazy_static = "1"
strum = "0.27.1"
strum_macros = "0.27.1"

[[bin]]
name = "sandboxer_db"
path = "src/bin/sandboxer_db.rs"

[lib]
name = "supernanny_sandboxer"
path = "src/lib.rs"