[package]
name = "supernanny_service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
hyper = "1.6.0"
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
dotenvy = "0.15.7"
r2d2 = "0.8.10"
r2d2_postgres = "0.18.2"
postgres = "0.19.10"
headers = "0.4"
async-trait = "0.1"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4.40", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }
tower_governor = "0.7.0"
