[package]
name = "SuperNanny_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["cookies", "openssl", "macros"] }
actix-cors = "0.7.1"
futures-util = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
uuid = { version = "1.3", features = ["v4"] }
whoami = "1.5.2"
rand = "0.8"
base64 = "0.21"
once_cell = "1.18"
regex = "1.9"
actix-service = "2.0.2"
argon2 = "0.5.3"
chrono = { version = "0.4.39", features = ["serde"] }
openssl = "0.10"
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15"
notify-rust = "4.5.6"
time = "0.3"