[package]
name = "SuperNanny_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web      = { version = "4", features = ["cookies", "openssl", "macros"] }
actix-cors     = "0.7.1"
actix-service  = "2.0.2"
argon2         = "0.5.3"
bcrypt         = "0.12"
base64         = "0.21"
jsonwebtoken   = "9.3.1"
chrono         = { version = "0.4.39", features = ["serde"] }
diesel         = { version = "2.1", features = ["postgres", "r2d2", "chrono"] }
dotenv         = "0.15"
futures-util   = "0.3.31"
notify-rust    = "4.5.6"
once_cell      = "1.18"
rand           = "0.8"
regex          = "1.9"
reqwest        = { version = "0.12", features = ["json", "rustls-tls"] }
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
time           = { version = "0.3", features = ["macros"] }
tokio          = { version = "1.43.0", features = ["full"] }
uuid           = { version = "1.3", features = ["v4", "serde"] }
anyhow         = "1.0"
openssl        = "0.10"
log            = "0.4"
env_logger     = "0.11"

[features]
persist_logs = []