[package]
name = "SuperNanny_front"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = "0.4"
dioxus-desktop = "0.4"
dioxus-core-macro = "0.4"
async-std = { version = "1.12", features = ["attributes"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
