[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
gloo-net   = { version = "0.6", features = ["json"] }
gloo       = "0.11"
gloo-timers = { version = "0.3.0", features = ["futures"] }
wasm-bindgen-futures = "0.4.42"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.27"
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
web-sys = { version = "0.3.77", features = ["Window", "Document", "HtmlInputElement", "HtmlSelectElement", "console", "HtmlDocument"] }
futures = "0.3.31"
cookie = "0.16"
gloo-dialogs = "0.2.0"
yew-router = "0.18"