[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
gloo = "0.10"
gloo-net = { version = "0.4", features = ["json"] }
wasm-bindgen-futures = "0.4.42"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
web-sys = { version = "0.3.77", features = ["Window", "Document", "HtmlInputElement", "console", "HtmlDocument"] }

cookie = "0.16"

yew-router = "0.17"